@@ -54,6 +54,7 @@ BeingHandler::BeingHandler()
         //SMSG_PLAYER_MOVE,
         //0x0119,
         GPMSG_BEING_ENTER,
+        GPMSG_BEING_LEAVE,
         GPMSG_BEINGS_MOVE,
         0
     };
@@ -74,6 +75,10 @@ void BeingHandler::handleMessage(MessageIn &msg)
     {
         case GPMSG_BEING_ENTER:
             handleBeingEnterMessage(msg);
+            break;
+
+        case GPMSG_BEING_LEAVE:
+            handleBeingLeaveMessage(msg);
             break;
 
         case GPMSG_BEINGS_MOVE:
@@ -410,6 +415,18 @@ BeingHandler::handleBeingEnterMessage(MessageIn &msg)
     being->setHairStyle(msg.readByte());
     being->setHairColor(msg.readByte());
     being->setSex(msg.readByte());
+}
+
+void BeingHandler::handleBeingLeaveMessage(MessageIn &msg)
+{
+    msg.readByte(); // type, assume player for now, TODO
+    Being *being = beingManager->findBeing(msg.readLong());
+    if (!being) return;
+    if (being == player_node->getTarget())
+    {
+        player_node->stopAttack();
+    }
+    beingManager->destroyBeing(being);
 }
 
 void BeingHandler::handleBeingsMoveMessage(MessageIn &msg)
